google info plist hidden

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ xcuserdata/
 Twitter-Clone-Example.xcodeproj/project.xcworkspace/xcuserdata/omarleal.xcuserdatad/UserInterfaceState.xcuserstate
 .DS_Store
 DS_Store
+Twitter-Clone-Example/GoogleService-Info.plist
